# amazon-reviews-bigquery

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml  manual-pipeline-run.yml
src/pipeline/: amazon_pipeline.py
src/tests/: conftest.py  test_integration.py  test_pipeline.py
