[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amazon-reviews-bigquery"
version = "0.1.0"
description = "Production-scale data pipeline: Amazon Reviews → BigQuery via Spark"
authors = [{name = "Anmol Srinivas", email = "anmolsrinivas@gmail.com"}]
license = {text = "MIT"}
dependencies = [
    # Production dependencies only
]

[project.optional-dependencies]
dev = [
    # Development dependencies
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203", 
    "W503", 
    "F401", # Ignore "imported but unused"
    "F403", # Ignore "import * used"
    "F405", # Ignore "name may be undefined from star import"
]
